--- a/Assets/USSStyle.uss
+++ b/Assets/USSStyle.uss
@@ -1,5 +1,5 @@
 .active {
-    transition-duration: 0.5s;
+    /* transition-duration: 0.5s; */
     background-color: rgba(0, 0, 0, 0.55);
     display: flex;
     opacity: 10;
@@ -50,7 +50,7 @@
     top: 0;
     left: auto;
     width: 100%;
-    transition: transform 0.5s ease-in-out;
+    /* transition: transform 0.5s ease-in-out; */
     height: 900px;
     background-color: rgb(55, 73, 94);
 }
